--- a/Sources/Application/Mmu.Mlh.DomainExtensions.csproj
+++ b/Sources/Application/Mmu.Mlh.DomainExtensions.csproj
@@ -8,6 +8,12 @@
     <Product>MyLittleHelpers.DomainExtensions</Product>
     <Description>DrMuellers little Domain Extensions</Description>
     <PackageIconUrl>https://raw.githubusercontent.com/DrMueller/MLH.DomainExtensions/master/Sources/Application/Infrastructure/Assets/M.png</PackageIconUrl>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <WarningsAsErrors />
   </PropertyGroup>
 
   <ItemGroup>
