--- a/NetCore-NuGet.yaml
+++ b/NetCore-NuGet.yaml
@@ -1,4 +1,4 @@
-name: 2.1$(rev:.r) # build numbering format
+name: 2.2$(rev:.r) # build numbering format
 
 resources:
 - repo: self
@@ -7,8 +7,8 @@ phases:
   displayName: Agent job 1
 
   condition: succeeded()
-  queue:
-    name: Hosted VS2017
+  pool:
+    vmImage: windows-2022
   variables:
     BuildConfiguration: 'Release'
   steps:
