--- a/NetCore-NuGet.yaml
+++ b/NetCore-NuGet.yaml
@@ -1,58 +1,35 @@
 name: 2.2$(rev:.r) # build numbering format
 
-resources:
-- repo: self
-phases:
-- phase: Phase_1
-  displayName: Agent job 1
+variables:
+  BuildConfiguration: 'Release'
+  FolderToPack: 'Application'
+  SolutionName: 'MLH.DomainExtensions.sln' 
+  ApplicationSubPath: 'MLH.DomainExtensions'
+  ReSharperSettingsFileName: 'CISettings_NuGet.DotSettings'
 
-  condition: succeeded()
+resources:
+  repositories:
+  - repository: ALMStuff
+    type: github
+    name: DrMueller/ALMStuff
+    ref: refs/heads/master
+    endpoint: GitHub-DrMueller
+
+jobs:
+- job: 'BuildAndPublishToNuGet'
+  displayName: 'Build and publish to NuGet'
   pool:
     vmImage: windows-2022
-  variables:
-    BuildConfiguration: 'Release'
   steps:
-  - task: DotNetCoreCLI@2
-    displayName: Restore
-    inputs:
-      command: restore
+  - checkout: self
+  - checkout: ALMStuff
+  - template: AzureDevOps/BuildTemplates/NetCore/Steps/Initialize_And_Test.yaml@ALMStuff
+    parameters:
+      BuildConfiguration: $(BuildConfiguration)
+      SolutionName: $(SolutionName)
+      ApplicationSubPath: $(ApplicationSubPath)
+      ReSharperSettingsFileName: $(ReSharperSettingsFileName)
+  - template: AzureDevOps/BuildTemplates/NetCore/Steps/Pack_And_Publish_To_NuGet.yaml@ALMStuff
+    parameters:
+      FolderToPack: $(FolderToPack)
 
-      projects: '**/*.csproj'
-
-      vstsFeed: '3c2d9c9a-d8f7-42f4-b7a3-dddf4064110a'
-
-
-  - task: DotNetCoreCLI@2
-    displayName: Build
-    inputs:
-      projects: '**/*.csproj'
-
-      arguments: '/p:TreatWarningsAsErrors="true" --configuration $(BuildConfiguration)'
-
-
-  - task: DotNetCoreCLI@2
-    displayName: Test
-    inputs:
-      command: test
-
-      projects: '**/*Tests/*.csproj'
-
-      arguments: '--configuration $(BuildConfiguration)'
-
-
-  - task: DotNetCoreCLI@2
-    displayName: Pack
-    inputs:
-      command: pack
-
-      packagesToPack: '**/Application/*.csproj'
-
-      versioningScheme: byBuildNumber
-
-
-  - task: DotNetCoreCLI@2
-    displayName: 'NuGet Push'
-    inputs:
-      command: push
-
-      publishVstsFeed: '3c2d9c9a-d8f7-42f4-b7a3-dddf4064110a'
