--- a/Sources/Application/Mmu.Mlh.DomainExtensions.csproj
+++ b/Sources/Application/Mmu.Mlh.DomainExtensions.csproj
@@ -20,6 +20,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
     <WarningsAsErrors />
+    <NoWarn>1701;1702;NU5048</NoWarn>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <NoWarn>1701;1702;NU5048</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
