--- a/Sources/UnitTests/Mmu.Mlh.DomainExtensions.UnitTests.csproj
+++ b/Sources/UnitTests/Mmu.Mlh.DomainExtensions.UnitTests.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
+    <PackageReference Include="System.Text.RegularExpressions" Version="4.3.1" />
   </ItemGroup>
 
   <ItemGroup>
