--- a/Sources/UnitTests/Mmu.Mlh.DomainExtensions.UnitTests.csproj
+++ b/Sources/UnitTests/Mmu.Mlh.DomainExtensions.UnitTests.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
     <PackageReference Include="Moq" Version="4.17.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="NUnit" Version="3.13.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.0.2" />
